# simple-day

./: .gitignore  LICENSE  Pipfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/: cli.py  main.py
src/simple_day/: model.py  schema.py  service.py  settings.py  view.py
tests/: test_service.py
