[tool.poetry]
name = "simple-day"
version = "0.1.0"
description = "Simple daily tracker API"
authors = ["Evgen Petrov"]
license = "MIT"
readme = "README.md"
packages = [{include = "simple_day"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
pynamodb = "^5.3.4"
boto3 = "^1.26.50"
pydantic = "^1.10.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
